--- a/style.css
+++ b/style.css
@@ -4,13 +4,13 @@ body {
 
 .container {
     display: flex;
-    height: 100%;
+    height: 600px;
     justify-content: center;
     align-items: center;
 }
 
 #clock { 
-    font-size: 250px;
+    font-size: 200px;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
 }
